# conan-inih

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
test_package/: CMakeLists.txt  conanfile.py  example.cpp  example_c.cpp  example_cpp_vector.cpp  test.ini
